updated text and added overflow rule to remove scrollbar

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div id="text-input" class="form">
-          <textarea id="text">Hi, I'm Dinah!|#I'm a web developer and writer. |#Well.|.|.| mostly developer lately.|#What do you want to know about me?|#&#9654; Dinah's Work\\&#9654; About Dinah\\&#9654; How to Contact Dinah\\&#9654; DANCE PARTY!!</textarea>
+          <textarea id="text">Hi, I'm Dinah!|#I work in Communications and Community. |#But.|.|.| no matter what, writing, especially fiction, is my passion!|#What do you want to know about me?|#&#9654; Dinah's Work\\&#9654; About Dinah\\&#9654; How to Contact Dinah\\&#9654; Nothing</textarea>
         </div>
 
         <div class="frame" id="frame">
