added overflow hidden to remove scrollbar

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     </head>
     <body>
         <div id="text-input" class="form">
-          <textarea id="text">Hi, I'm Dinah!|#I work in Communications and Community. |#But.|.|.| no matter what, writing, especially fiction, is my passion!|#What do you want to know about me?|#&#9654; Dinah's Work\\&#9654; About Dinah\\&#9654; How to Contact Dinah\\&#9654; Nothing</textarea>
+          <textarea id="text">Hi, I'm Dinah!|#I work in Communications and Community. |#But.|.|.| no matter what, writing, especially fiction, is my passion!|#What do you want to know about me?|#&#9654; Dinah's Work\\&#9654; About Dinah\\&#9654; How to Contact Dinah\\&#9654; Wait, what did you say?</textarea>
         </div>
 
         <div class="frame" id="frame">
           <img src="https://vignette.wikia.nocookie.net/villains/images/c/c4/Chara_Dreemurr_%28Transparent_ver.%29/revision/latest?cb=20170709201952" class="profile">
-            <p></p>
+            <p class="text-body"></p>
         </div>
 
         <audio src="blip.wav" autostart="false" id="blip" ></audio>
